Misc changes
- minor cleanup
- optimized crystal
- added crystal1